add: awesoem wm

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
 # enable mouse
 set -g mouse on
 
+# enable vim
+set-window-option -g mode-keys vi
+
 # remap prefix from 'C-b' to 'C-t'
 unbind C-b
 set-option -g prefix C-t
@@ -24,7 +27,6 @@ bind R refresh-client
 
 # set -g status-right "%d %b %R"
 set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
-
 # panel resizing
 bind -r C-h resize-pane -L 2
 bind -r C-j resize-pane -D 2
@@ -40,3 +42,10 @@ bind -r C-l resize-pane -R 2
 
 # show session, window, pane in left status bar
 set -g status-right '#[fg=#21b7ec] #[battery_percentage] #[fg=#50374f]| #[fg=white]%a %h-%d %H:%M'
+
+
+# Copy text
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
